implemented: new endpoint, methods for service and repository
move transaction logic to service :(
