# docs/swagger/swagger.json
@@ -17,7 +17,83 @@
     "host": "localhost:9090",
     "basePath": "/api/v1",
     "paths": {
-        "/tracks": {
+        "/tracks/": {
+            "get": {
+                "description": "List of tracks with filters",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Tracks"
+                ],
+                "summary": "List of tracks",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Limit result.",
+                        "name": "limit",
+                        "in": "query"
+                    },
+                    {
+                        "type": "string",
+                        "description": "Offset result.",
+                        "name": "offset",
+                        "in": "query"
+                    },
+                    {
+                        "type": "string",
+                        "description": "Name of the artist or group.",
+                        "name": "artist",
+                        "in": "query"
+                    },
+                    {
+                        "type": "string",
+                        "description": "Title of track.",
+                        "name": "track",
+                        "in": "query"
+                    },
+                    {
+                        "type": "string",
+                        "description": "List of tracks.",
+                        "name": "releasedyaer",
+                        "in": "query"
+                    },
+                    {
+                        "type": "string",
+                        "description": "Exact link",
+                        "name": "link",
+                        "in": "query"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Success response",
+                        "schema": {
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/v1.TrackResponse"
+                            }
+                        }
+                    },
+                    "400": {
+                        "description": "Bad request",
+                        "schema": {
+                            "type": "object",
+                            "$ref": "#/definitions/v1.HTTPError"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal server error",
+                        "schema": {
+                            "type": "object",
+                            "$ref": "#/definitions/v1.HTTPError"
+                        }
+                    }
+                }
+            },
             "post": {
                 "description": "Creating track",
                 "consumes": [
@@ -72,6 +148,60 @@
                     }
                 }
             }
+        },
+        "/tracks/{id}": {
+            "post": {
+                "description": "Retriving track",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Tracks"
+                ],
+                "summary": "Retrive track",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "track id",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "get track result",
+                        "schema": {
+                            "type": "object",
+                            "$ref": "#/definitions/v1.TracksRetrieveResponse"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad request",
+                        "schema": {
+                            "type": "object",
+                            "$ref": "#/definitions/v1.HTTPError"
+                        }
+                    },
+                    "422": {
+                        "description": "Validation errors",
+                        "schema": {
+                            "type": "object",
+                            "$ref": "#/definitions/v1.HTTPError"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal server error",
+                        "schema": {
+                            "type": "object",
+                            "$ref": "#/definitions/v1.HTTPError"
+                        }
+                    }
+                }
+            }
         }
     },
     "definitions": {
@@ -79,6 +209,29 @@
             "type": "object",
             "properties": {
                 "message": {
+                    "type": "string"
+                }
+            }
+        },
+        "v1.TrackResponse": {
+            "type": "object",
+            "properties": {
+                "artist": {
+                    "type": "string"
+                },
+                "link": {
+                    "type": "string"
+                },
+                "lyric": {
+                    "type": "array",
+                    "items": {
+                        "type": "string"
+                    }
+                },
+                "released": {
+                    "type": "string"
+                },
+                "track": {
                     "type": "string"
                 }
             }
@@ -97,6 +250,29 @@
                 "song": {
                     "type": "string",
                     "example": "Song name"
+                }
+            }
+        },
+        "v1.TracksRetrieveResponse": {
+            "type": "object",
+            "properties": {
+                "artist": {
+                    "type": "string"
+                },
+                "link": {
+                    "type": "string"
+                },
+                "lyric": {
+                    "type": "array",
+                    "items": {
+                        "type": "string"
+                    }
+                },
+                "released": {
+                    "type": "string"
+                },
+                "track": {
+                    "type": "string"
                 }
             }
         }
