# internal/domain/entities/track.go
@@ -3,9 +3,35 @@ package entities
 import "time"
 
 type Track struct {
-	Title    string
+	ID       int
+	Track    string
 	Artist   string
-	Lyrics   []string
+	Lyric    []string
 	Link     string
 	Released time.Time
+}
+
+type TrackCreate struct {
+	Title  string
+	Artist string
+}
+
+type TrackGetListFilters struct {
+	Limit        int
+	Offset       int
+	Artist       string
+	Track        string
+	ReleasedYear string
+	Link         string
+}
+
+type TrackInfoResult struct {
+	ReleaseDate time.Time
+	Text        string
+	Link        string
+}
+
+type TrackInfo struct {
+	Group string
+	Song  string
 }
